@@ -2,15 +2,15 @@ package core.basesyntax.service;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class FileCsvReader implements Reader {
     @Override
-    public List<String> read(String fileName) {
+    public List<String> readFromFile(String fileName) {
         try {
-            return Files.readAllLines(Path.of(fileName))
+            return Files.readAllLines(Paths.get(fileName))
                 .stream()
                 .skip(1)
                 .collect(Collectors.toList());
